--- a/css/styl.css
+++ b/css/styl.css
@@ -1,6 +1,9 @@
-.bg-box::after{
-    content: "";
-    background-color: green;
-    width: 1500px;
+.box{
+    width: 1000px;
     height: 300px;
+    background-color: green;
+    background-image: url(../img/3F3F.webp), url(../img/58eb07b830eab15b56162788.png);
+    background-position: center left,center right;
+    background-repeat: repeat-y, repeat-y; 
+    background-size: 100px 100px, 100px 100px;
 }
